@@ -1,4 +1,14 @@
-### Fix tox (HEAD -> main)
+### Fix github ci (HEAD -> main)
+>Mon, 16 Jan 2023 02:14:57 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix tox (origin/main, origin/HEAD)
 >Mon, 16 Jan 2023 01:51:35 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Add support to python 3.8, 3.9, 3.10 (origin/main, origin/HEAD)
+### Add support to python 3.8, 3.9, 3.10
 >Mon, 16 Jan 2023 01:27:32 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
